feat: add changeset deps

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint ."
+		"lint": "prettier --check . && eslint .",
+		"ci:publish": "npm run build && changeset publish"
 	},
 	"files": [
 		"dist",
@@ -59,6 +60,7 @@
 		"svelte"
 	],
 	"dependencies": {
+		"@changesets/cli": "^2.29.4",
 		"form-data-json-convert": "^2.2.3",
 		"graphql-tag": "^2.12.6",
 		"lodash-es": "^4.17.21",
