--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write # Needed to push tags
+
 jobs:
   publish:
     runs-on: ubuntu-latest
