--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 	"homepage": "https://github.com/remoflury/svelte-craftcms-headless-formie#readme",
 	"scripts": {
 		"dev": "vite dev",
+		"test": "vitest watch",
+		"test:once": "vitest run",
 		"build": "vite build && npm run prepack",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
@@ -53,10 +55,12 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/lodash-es": "^4.17.12",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
+		"happy-dom": "^17.6.3",
 		"husky": "^9.1.7",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
@@ -65,7 +69,8 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^6.2.6"
+		"vite": "^6.2.6",
+		"vitest": "^3.2.2"
 	},
 	"keywords": [
 		"svelte",
